--- a/app/views/children/_cases_filter.html.erb
+++ b/app/views/children/_cases_filter.html.erb
@@ -16,7 +16,7 @@
       '5-11',
       '12-17',
       '18+'
-    ]) %>
+    ], nil, nil, 'range') %>
     <%= build_filter_checkboxes('Sex:', 'sex', [
       'male',
       'female'
@@ -48,7 +48,7 @@
             <label class="has_date">From</label>
           </div>
           <div class="medium-10 columns">
-            <input type="text" id="registration_date_to" class="form_date_field" name="registration_date" />
+            <input type="text" id="registration_date_to" class="form_date_field" name="registration_date" filter_type="date_range" />
           </div>
         </div>
         <br>
@@ -57,7 +57,7 @@
             <label class="has_date">To</label>
           </div>
           <div class="medium-10 columns">
-            <input type="text" id="registration_date_from" class="form_date_field" name="registration_date" />
+            <input type="text" id="registration_date_from" class="form_date_field" name="registration_date" filter_type="date_range" />
           </div>
         </div>
       </div>
