PRIMERO-474, PRIMERO-547, PRIMERO-548
1. app/helpers/application_helper.rb, app/views/children/_show_child_toolbar.html.erb: Move the 'Create Incident' button between 'Flag Record' and edit/cancel/save group. The button 'Create Incident' appears in the show and edit screen. The 'Create Incident' will be a link in the show page and will be a submit button in the edit page in order to trigger any validation.

2. config/routes.rb, app/controllers/children_controller.rb: Adding method to the controller in order to call the 'Create Incident' action from the show page via a link.

3. Other minor changes.

4. Refactoring test cases.

--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -26,6 +26,7 @@
             <%= render 'record_shared/suspect_flag', record: @child %>
         </div>
     </li>
+    <%= ctl_create_incident_button(@child) %>
 <% end %>
 
   <li>
