Made incident violations indexable and filterable

--- a/app/views/incidents/_incidents_filter.html.erb
+++ b/app/views/incidents/_incidents_filter.html.erb
@@ -1,6 +1,6 @@
 <div class="panel">
   <form id="index_filter_form">
-    <%= build_filter_checkboxes('Violation:', 'violation', [
+    <%= build_filter_checkboxes('Violation:', 'violations', [
       'killing',
       'maiming',
       'recruitment',
