--- a/app/views/form_section/_textarea.html.erb
+++ b/app/views/form_section/_textarea.html.erb
@@ -11,7 +11,7 @@
       </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_area_tag name, value, :disabled => textarea.editable == false ? true : false, :id => field_id %>
+    <%= text_area_tag name, value, :disabled => textarea.editable == false ? true : false, :id => field_id, rows: "2" %>
     <% if textarea.guiding_questions.present? %>
       <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0', 
             data: { 
