--- a/app/views/tracing_requests/_header_message.html.erb
+++ b/app/views/tracing_requests/_header_message.html.erb
@@ -9,14 +9,14 @@
         <% if tracing_request.duplicate? %>
             <h3 class="duplicate-message"><%= duplicate_message %></h3>
         <% end %>
-        <% unless duplicates.empty? %>
+        <% if duplicates.present? %>
             <h3 class="duplicate-message"><%= t("tracing_request.another_duplicate_before_link") %>
             <%= link_to 'here', tracing_request_path(duplicates.first) %><%= t("tracing_request.another_duplicate_after_link") %></h3>
         <% end %>
 
         <div id='interviewer_details'>
             <p><strong><%= t("tracing_request.registered_by") %></strong><br>
-             <%= tracing_request['created_by'] %> <%= link_to_tracing_request_update_info(tracing_request) %> 
+             <%= tracing_request['created_by'] %> <%= link_to_tracing_request_update_info(tracing_request) %><br>
              <%= current_user.localize_date(tracing_request['created_at']) %></p>
             <% if tracing_request['last_updated_at']%>
                 <p><strong><%= t("tracing_request.last_updated") %></strong><br>
