--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -71,6 +71,7 @@ table.list_view, table.record_list_view {
       font-size: 0.875rem;
       &.id_column{
         min-width: 105px;
+        text-transform: uppercase;
       }
       &.sorting_1 {
         background: rgba(134,160,93,.15);
