--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -20,38 +20,13 @@
 <div class="row collapse">
   <div class="large-9 columns">
     <div class="clearfix"></div>
-
-    <%#
-      TODO: For now the filter and order-by have been removed as per PRIMRO-105.
-      We will need to put them back in.
-    %>
-    <% if false %>
-    <div class="filter_bar" style="display: none;">
-      <div class="row">
-        <div class="large-6 medium-6 columns">
-          <%#= render :partial => "children/order_by_box" %>
-        </div>
-      </div>
-    </div>
-    <div class="scope_bar">
-      <div class="row">
-        <div class="large-6 medium-6 columns">
-          <form class="record_scope_bar_form">
-            <ul class="inline-list">
-              <%= render :partial => "record_shared/scopes", locals: { record: record } %>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </div>
-    <% end %>
     <table width="100%" class="record_list_view" cellpadding="0" cellspacing="0">
       <thead>
         <tr>
-          <% list_view_header(record).each_with_index do |field, i| %>
-          <th aria-field="<%= field[:sort_title] %>" aria-field-index="<%= i %>">
-            <%= field[:title] ? t("#{record}.#{field[:title]}") : "" %>
-          </th>
+          <% list_view_header(record, @current_modules).each_with_index do |field, i| %>
+            <th aria-field="<%= field[:sort_title] %>" aria-field-index="<%= i %>">
+              <%= field[:title] ? t("#{record}.#{field[:title]}") : "" %>
+            </th>
           <% end %>
         </tr>
       </thead>
