adding flag to id column, and setting filter context to page_content instead of body, and resizing chosen filter

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -48,6 +48,7 @@ table.list_view, table.record_list_view {
   border:none;
   margin-bottom: 20px;
   a.id_link{
+    float: left;
     text-decoration: none;
     &:hover{
       font-weight:bold;
