--- a/app/assets/stylesheets/primero/scopes_filters.scss
+++ b/app/assets/stylesheets/primero/scopes_filters.scss
@@ -85,4 +85,9 @@ div.scope_bar {
       margin-right: 0 !important;
     }
   }
+
+  .chosen-container-single {
+    width: 96% !important;
+    margin: 10px 0 20px 4px !important;
+  }
 }
