--- a/app/assets/stylesheets/primero/alerts.scss
+++ b/app/assets/stylesheets/primero/alerts.scss
@@ -25,3 +25,29 @@
     }
   }
 }
+
+.flag {
+  width: 30px;
+  padding: 3px 5px;
+  font-size: 30px;
+  color: $green_color;
+  position: relative;
+  margin: -10px 0 0 10px;
+  float: left;
+  
+
+  span {
+    float: left;
+    font-size: 0.8rem;
+    color: #fff;
+    z-index: 99;
+    position: absolute;
+    margin-top: 6px;
+  }
+
+  i {
+    float: left;
+    position: absolute;
+    z-index: 5;
+  }
+}
