fixed font px to rem , and conflicted use of flag class

--- a/app/assets/stylesheets/primero/alerts.scss
+++ b/app/assets/stylesheets/primero/alerts.scss
@@ -26,10 +26,10 @@
   }
 }
 
-.flag {
+.flag_icon {
   width: 30px;
   padding: 3px 5px;
-  font-size: 30px;
+  font-size: 2rem;
   color: $green_color;
   position: relative;
   margin: -10px 0 0 10px;
@@ -38,7 +38,7 @@
 
   span {
     float: left;
-    font-size: 0.8rem;
+    font-size: $thirteen_px;
     color: #fff;
     z-index: 99;
     position: absolute;
