--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -6,7 +6,7 @@
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
       <% if record.flagged? %>
-        <div class="flag">
+        <div class="flag_icon">
           <%= icon('bookmark fa-rotate-270') %>
           <span><%= record.flags.count %></span>
         </div>
