--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -1,14 +1,39 @@
 <tr>
-  <td>
-    <%= icon('flag', '', class: 'flagged') if record.flagged? %>
-  </td>
-  <td id="child_<%= record.id %>" class="id_column">
+  <% if fields_to_show.include? 'flag' %>
+    <td>
+      <%= icon('flag', '', class: 'flagged') if record.flagged? %>
+    </td>
+  <% end %>
+  <% if fields_to_show.include? 'owned_by_text' %>
+    <td><%= record.owned_by_text %></td>
+  <% end %>
+  <% if fields_to_show.include? 'short_id' %>
+    <td id="child_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
-  </td>
-  <td><%= index_highlighted_case_name(@highlighted_fields, record) %></td>
-  <td><%= record.age %></td>
-  <td><%= record.sex %></td>
-  <td><%= record.created_at %></td>
-  <td class="photo"><%= icon('camera') if record.photo_keys.present? %></td>
+    </td>
+  <% end %>
+  <% if fields_to_show.include? 'sortable_name' %>
+    <td><%= index_highlighted_case_name(@highlighted_fields, record) %></td>
+  <% end %>
+  <% if fields_to_show.include? 'survivor_code_no' %>
+    <td><%= record.survivor_code_no %></td>
+  <% end %>
+  <% if fields_to_show.include? 'age' %>
+    <td><%= record.age %></td>
+  <% end %>
+  <% if fields_to_show.include? 'sex' %>
+    <td><%= record.sex %></td>
+  <% end %>
+  <% if fields_to_show.include? 'registration_date' %>
+    <% #TODO - verify this field %>
+    <td><%= record.registration_date %></td>
+  <% end %>
+  <% if fields_to_show.include? 'interview_date' %>
+    <% #TODO - verify this field %>
+    <td><%= record.created_at %></td>
+  <% end %>
+  <% if fields_to_show.include? 'photo' %>
+    <td class="photo"><%= icon('camera') if record.photo_keys.present? %></td>
+  <% end %>
 </tr>
