Fixed missing font assets

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,3 +16,5 @@
 @import "primero/scopes_filters";
 @import "primero/dropdowns";
 @import "primero/datatables";
+@import "font-awesome-sprockets";
+@import "font-awesome";
