PRIMERO-605 fix dates in UI. Formating days as Day-Month-Year. Include formating dates fields in the index page for Incidents and TracingRequests.

--- a/app/views/record_shared/_incidents_summary_row.html.erb
+++ b/app/views/record_shared/_incidents_summary_row.html.erb
@@ -8,6 +8,6 @@
   </td>
   <td><%= record.survivor_code %></td>
   <td><%= record.caseworker_code %></td>
-  <td><%= record.date_of_first_report %></td>
-  <td><%= record.start_date_of_incident_from %></td>
+  <td><%= field_format_date(record.date_of_first_report) %></td>
+  <td><%= field_format_date(record.start_date_of_incident_from) %></td>
 </tr>
