--- a/app/views/record_shared/_tracing_requests_summary_row.html.erb
+++ b/app/views/record_shared/_tracing_requests_summary_row.html.erb
@@ -6,5 +6,5 @@
     <%= link_to text_to_identify_tracing_request(record), tracing_request_path(record), class: 'id_link' %>
   </td>
   <td><%= record.relation_name %></td>
-  <td><%= record.inquiry_date %></td>
+  <td><%= field_format_date(record.inquiry_date) %></td>
 </tr>
