--- a/app/views/tracing_requests/_header_message.html.erb
+++ b/app/views/tracing_requests/_header_message.html.erb
@@ -17,14 +17,14 @@
         <div id='interviewer_details'>
             <p><strong><%= t("tracing_request.registered_by") %></strong><br>
              <%= tracing_request['created_by'] %> <%= link_to_tracing_request_update_info(tracing_request) %><br>
-             <%= current_user.localize_date(tracing_request['created_at']) %></p>
+             <%= field_format_date(tracing_request.created_at) %></p>
             <% if tracing_request['last_updated_at']%>
                 <p><strong><%= t("tracing_request.last_updated") %></strong><br>
-                <%= current_user.localize_date(tracing_request['last_updated_at']) %> </p>
+                <%= field_format_date(tracing_request.last_updated_at) %> </p>
             <% end %>
             <% if tracing_request['posted_from']=="Mobile" %>
                 <p><strong><%= t("tracing_request.posted_from_mobile")  %></strong><br>
-                <%= current_user.localize_date(tracing_request['posted_at']) %> </p>
+                <%= field_format_date(tracing_request.posted_at) %> </p>
             <% end %>
         </div>
     </div>
