--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -4,7 +4,7 @@
       <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
         <li>
         <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
-                    url_for(:format => exporter.id, :per_page => :all, :id => (defined?(instance) ? instance.id : nil)),
+                      url_for(:format => exporter.id, :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => params),
                     :class => "password-prompt") %>
         </li>
       <% end %>
