--- a/app/views/record_shared/_suspect_flag.html.erb
+++ b/app/views/record_shared/_suspect_flag.html.erb
@@ -4,10 +4,12 @@
        :mark_as_label => t("#{record.class.name.underscore.downcase}.flag_record"),
        :mark_as_message_id => "flag_message",
        :mark_as_message => t("#{record.class.name.underscore.downcase}.flag_reason")+":",
+       :mark_as_message_unflag => t("#{record.class.name.underscore.downcase}.unflag_reason")+":",
        :mark_as_message_date => t("#{record.class.name.underscore.downcase}.flag_reason_date")+":",
        :mark_as_message_date_id => "flag_date",
        :mark_as_property => "flag",
        :mark_as_submit_label => t("#{record.class.name.underscore.downcase}.flag_label"),
+       :unmark_as_submit_label => t("#{record.class.name.underscore.downcase}.unflag_label"),
        :error_message => t("#{record.class.name.underscore.downcase}.flag_error_message"),
        :style => "flag",
        :button_style => "green-button"
