--- a/app/views/form_section/_subform.html.erb
+++ b/app/views/form_section/_subform.html.erb
@@ -9,6 +9,9 @@
     <% (number_of_subforms).times do |i| %>
     <div id="subform_container_<%= subform.name %>_<%= i %>" class="subform_container">
       <fieldset id="subform_<%= subform.name %>_<%= i %>" class="<%= subform.name %> subform no-border">
+      <% fk_unique_id = field_keys(subform.name, i, 'unique_id', form_group_name) %>
+      <%= hidden_field_tag(field_tag_name(formObject, nil, fk_unique_id),
+                           field_value(formObject, nil, fk_unique_id)) %>
       <%= render partial: "form_section/subform_expand_collapse_header",
                  object: formObject,
                  locals: { formObject: formObject,
