--- a/app/assets/stylesheets/primero/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/primero/foundation_and_overrides.scss
@@ -48,6 +48,14 @@ $green_color: #86A05D;
 $red_color: #8d0000;
 $white_color: #fff;
 
+.white {
+	color: $white_color;
+}
+
+.light-green {
+	color: $stroke_green_color;
+}
+
 ////////////////////////////////////////////////
 // General
 ////////////////////////////////////////////////
