--- a/app/views/record_shared/_cases_summary_row.html.erb
+++ b/app/views/record_shared/_cases_summary_row.html.erb
@@ -2,10 +2,10 @@
   <td id="child_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_child(record), case_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
-      <% if record.flagged? %>
+      <% if record.flagged? && display_flag_count(record.flags) %>
         <div class="flag_icon">
           <%= icon('bookmark fa-rotate-270') %>
-          <span><%= record.flags.select{|f| !f.removed}.count %></span>
+          <span><%= display_flag_count(record.flags) %></span>
         </div>
       <% end %>
   </td>
