--- a/app/views/record_shared/_incidents_summary_row.html.erb
+++ b/app/views/record_shared/_incidents_summary_row.html.erb
@@ -7,7 +7,7 @@
     <td id="incident_<%= record.id %>" class="id_column">
       <%= link_to text_to_identify_incident(record), incident_path(record), class: 'id_link' %>
       <% #content_tag(:div, nil, :class => 'flag reunited') if record.reunited? %>
-      <% if record.flagged? && record.flag_count > 0) %>
+      <% if record.flagged? && record.flag_count > 0 %>
         <div class="flag_icon">
           <%= icon('bookmark fa-rotate-270') %>
           <span><%= record.flag_count %></span>
