corrected syntax error

--- a/app/views/record_shared/_tracing_requests_summary_row.html.erb
+++ b/app/views/record_shared/_tracing_requests_summary_row.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td id="tracing_request_<%= record.id %>" class="id_column">
     <%= link_to text_to_identify_tracing_request(record), tracing_request_path(record), class: 'id_link' %>
-    <% if record.flagged? && record.flag_count > 0) %>
+    <% if record.flagged? && record.flag_count > 0 %>
       <div class="flag_icon">
         <%= icon('bookmark fa-rotate-270') %>
         <span><%= record.flag_count %></span>
